--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,12 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
-  http: ^0.13.5
+  dio: ^4.0.6
+ # http: ^0.13.5
+  geocoding: ^2.0.5
+  geolocator: ^9.0.2
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
