--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   dio: ^4.0.6
- # http: ^0.13.5
+  cached_network_image: ^3.2.2
   geocoding: ^2.0.5
   geolocator: ^9.0.2
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  flutter_svg: ^1.1.6
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
@@ -34,14 +36,11 @@ flutter:
      - assets/images/
   #   - images/a_dot_ham.jpeg
 
+  fonts:
+     - family: SF
+       fonts:
+         - asset: assets/fonts/SF-Pro-Display-BlackItalic.ttf
 
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
